# First-party Caustica NRD (vendored from NVIDIA-RTX/NRD).
# Library only — shaders are compiled by Caustica via caustica_compile_shaders.

cmake_minimum_required(VERSION 3.22)

include(CMakeDependentOption)
include(FetchContent)

if((CMAKE_GENERATOR_PLATFORM MATCHES "ARM64") OR (CMAKE_SYSTEM_PROCESSOR MATCHES "aarch64|arm64"))
    set(IS_ARM64 TRUE)
else()
    set(IS_ARM64 FALSE)
endif()

# Caustica owns this tree: always static, never embed NRD's own shader pack.
set(NRD_STATIC_LIBRARY ON CACHE BOOL "Build NRD as a static library" FORCE)
option(NRD_SUPPORTS_VIEWPORT_OFFSET "Enable 'CommonSettings::rectOrigin' support" OFF)
option(NRD_SUPPORTS_CHECKERBOARD "Enable 'checkerboardMode' support" ON)
option(NRD_SUPPORTS_HISTORY_CONFIDENCE "Enable 'IN_DIFF_CONFIDENCE' and 'IN_SPEC_CONFIDENCE' support" ON)
option(NRD_SUPPORTS_DISOCCLUSION_THRESHOLD_MIX "Enable 'IN_DISOCCLUSION_THRESHOLD_MIX' support" ON)
option(NRD_SUPPORTS_BASECOLOR_METALNESS "Enable 'IN_BASECOLOR_METALNESS' support" ON)
option(NRD_SUPPORTS_ANTIFIREFLY "Enable 'enableAntiFirefly' support" ON)
option(REBLUR_PERFORMANCE_MODE "Better performance / worse quality (consoles)" OFF)
set(NRD_EMBEDS_SPIRV_SHADERS OFF CACHE BOOL "NRD embeds SPIRV shaders" FORCE)
set(NRD_EMBEDS_DXIL_SHADERS OFF CACHE BOOL "NRD embeds DXIL shaders" FORCE)
set(NRD_EMBEDS_DXBC_SHADERS OFF CACHE BOOL "NRD embeds DXBC shaders" FORCE)

set(NRD_NORMAL_ENCODING "2" CACHE STRING "Normal encoding variant (0-4, matches nrd::NormalEncoding)")
set(NRD_ROUGHNESS_ENCODING "1" CACHE STRING "Roughness encoding variant (0-2, matches nrd::RoughnessEncoding)")

file(READ "${CMAKE_CURRENT_SOURCE_DIR}/Include/NRD.h" ver_h)
string(REGEX MATCH "NRD_VERSION_MAJOR ([0-9]*)" _ "${ver_h}")
set(NRD_VERSION_MAJOR ${CMAKE_MATCH_1})
string(REGEX MATCH "NRD_VERSION_MINOR ([0-9]*)" _ "${ver_h}")
set(NRD_VERSION_MINOR ${CMAKE_MATCH_1})
string(REGEX MATCH "NRD_VERSION_BUILD ([0-9]*)" _ "${ver_h}")
set(NRD_VERSION_BUILD ${CMAKE_MATCH_1})
message(STATUS "Caustica NRD: v${NRD_VERSION_MAJOR}.${NRD_VERSION_MINOR}.${NRD_VERSION_BUILD}")

file(WRITE "${CMAKE_CURRENT_SOURCE_DIR}/Shaders/Include/NRDEncoding.hlsli"
    "// Auto-generated by Caustica NRD CMake. Do not modify.\n"
    "#define NRD_NORMAL_ENCODING ${NRD_NORMAL_ENCODING}\n"
    "#define NRD_ROUGHNESS_ENCODING ${NRD_ROUGHNESS_ENCODING}\n"
)

set(COMPILE_DEFINITIONS "")
foreach(opt IN ITEMS
    NRD_STATIC_LIBRARY
    NRD_SUPPORTS_VIEWPORT_OFFSET
    NRD_SUPPORTS_CHECKERBOARD
    NRD_SUPPORTS_HISTORY_CONFIDENCE
    NRD_SUPPORTS_DISOCCLUSION_THRESHOLD_MIX
    NRD_SUPPORTS_BASECOLOR_METALNESS
    NRD_SUPPORTS_ANTIFIREFLY
    REBLUR_PERFORMANCE_MODE
)
    if(${opt})
        list(APPEND COMPILE_DEFINITIONS "${opt}=1")
    else()
        list(APPEND COMPILE_DEFINITIONS "${opt}=0")
    endif()
endforeach()

# MathLib (shader + CPU helper headers). Prefer the known-good tag used by Caustica.
if(NOT TARGET MathLib)
    FetchContent_Declare(
        mathlib
        GIT_REPOSITORY https://github.com/NVIDIA-RTX/MathLib.git
        GIT_TAG v7
        GIT_SHALLOW 1
    )
    message(STATUS "Caustica NRD: fetching MathLib")
    FetchContent_MakeAvailable(mathlib)
endif()

set(GLOB_INCLUDE
    "Include/NRD.h"
    "Include/NRDDescs.h"
    "Include/NRDSettings.h"
)
set(GLOB_SOURCE
    "Source/InstanceImpl.cpp"
    "Source/InstanceImpl.h"
    "Source/Reblur.cpp"
    "Source/Reference.cpp"
    "Source/Relax.cpp"
    "Source/Sigma.cpp"
    "Source/StdAllocator.h"
    "Source/Timer.cpp"
    "Source/Timer.h"
    "Source/Wrapper.cpp"
)
file(GLOB GLOB_DENOISERS CONFIGURE_DEPENDS "Source/Denoisers/*.hpp")
set(GLOB_RESOURCES
    "Resources/NRD.rc"
    "Resources/Version.h"
)

add_library(NRD STATIC
    ${GLOB_SOURCE}
    ${GLOB_DENOISERS}
    ${GLOB_RESOURCES}
    ${GLOB_INCLUDE}
)
add_library(caustica::nrd ALIAS NRD)

target_link_libraries(NRD PRIVATE MathLib)
target_include_directories(NRD
    PUBLIC
        "${CMAKE_CURRENT_SOURCE_DIR}/Include"
)
# SPIR-V register offsets reported by nrd::LibraryDesc (must match shader limits).
set(SPIRV_SREG_OFFSET 0)
set(SPIRV_BREG_OFFSET 2)
set(SPIRV_UREG_OFFSET 3)
set(SPIRV_TREG_OFFSET 20)

target_compile_definitions(NRD
    PRIVATE
        WIN32_LEAN_AND_MEAN
        NOMINMAX
        _CRT_SECURE_NO_WARNINGS
        NRD_EMBEDS_SPIRV_SHADERS=0
        NRD_EMBEDS_DXIL_SHADERS=0
        NRD_EMBEDS_DXBC_SHADERS=0
        SPIRV_SREG_OFFSET=${SPIRV_SREG_OFFSET}
        SPIRV_BREG_OFFSET=${SPIRV_BREG_OFFSET}
        SPIRV_UREG_OFFSET=${SPIRV_UREG_OFFSET}
        SPIRV_TREG_OFFSET=${SPIRV_TREG_OFFSET}
    PUBLIC
        NRD_NORMAL_ENCODING=${NRD_NORMAL_ENCODING}
        NRD_ROUGHNESS_ENCODING=${NRD_ROUGHNESS_ENCODING}
        ${COMPILE_DEFINITIONS}
)
target_compile_features(NRD PUBLIC cxx_std_17)
target_compile_options(NRD
    PRIVATE
        $<$<OR:$<CXX_COMPILER_ID:Clang>,$<CXX_COMPILER_ID:GNU>>:
            -Wextra
            -Wno-missing-field-initializers
            $<$<NOT:$<BOOL:${IS_ARM64}>>:-mssse3>
        >
        $<$<AND:$<OR:$<CXX_COMPILER_ID:Clang>,$<CXX_COMPILER_ID:GNU>>,$<NOT:$<BOOL:${MSVC}>>>:
            -Werror
            -fPIC
            -fvisibility=hidden
        >
        $<$<CXX_COMPILER_ID:MSVC>:
            /W4
            /WX
            /wd4324
        >
)

set_target_properties(NRD PROPERTIES
    FOLDER "caustica/nrd"
    ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}"
)

# Expose shader roots for Caustica's ShaderMake integration.
set(CAUSTICA_NRD_ROOT "${CMAKE_CURRENT_SOURCE_DIR}" CACHE INTERNAL "Caustica first-party NRD root")
set(CAUSTICA_NRD_SHADER_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/Shaders/Source" CACHE INTERNAL "")
set(CAUSTICA_NRD_SHADER_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/Shaders/Include" CACHE INTERNAL "")
set(CAUSTICA_NRD_SHADER_RESOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/Shaders/Resources" CACHE INTERNAL "")
